# python-faiss-grpc-server

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: grpc_specification.md
examples/: ann_pb2.py  ann_pb2_grpc.py  client.py  create_index.py
proto/: ann.proto
python/ann_grpc/: ann_server.py  main.py
python/ann_grpc/indexes/: annoy_index.py  base.py  faiss_index.py  loader.py
python/ann_grpc/proto/: ann_pb2.py  ann_pb2_grpc.py
python/faiss_grpc/: faiss_server.py  main.py
python/faiss_grpc/indexes/: annoy_index.py  faiss_index.py
tests/: conftest.py  test_annoy.py  test_faiss.py  test_faiss_100.py  test_faiss_multiple_indexes.py  test_faiss_server.py  test_server_annoy.py  test_server_faiss.py  test_server_multiple_indexes.py  util.py
